Improved ignore list
now the whole .xcodeproj/xcuserdata folder is beeing ignored

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
 
-PerlinNoise.xcodeproj/project.xcworkspace/xcuserdata/saschasanzenbacher.xcuserdatad/UserInterfaceState.xcuserstate
+PerlinNoise.xcodeproj/project.xcworkspace/xcuserdata/*
 
-PerlinNoise.xcodeproj/xcuserdata/saschasanzenbacher.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
-
-PerlinNoise.xcodeproj/xcuserdata/saschasanzenbacher.xcuserdatad/xcschemes/PerlinNoise.xcscheme
-
-PerlinNoise.xcodeproj/xcuserdata/saschasanzenbacher.xcuserdatad/xcschemes/xcschememanagement.plist
+PerlinNoise.xcodeproj/xcuserdata/*
