--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,9 +1,9 @@
-{
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
-    "version": "0.1.0",
-    "command": "echo",
-    "isShellCommand": true,
-    "args": ["Hello World"],
-    "showOutput": "always"
-}
+{  
+   // See https://go.microsoft.com/fwlink/?LinkId=733558
+   // for the documentation about the tasks.json format
+   "version": "0.1.0",
+   "windows": {
+      "command": "Win32PerlinNoise\\build.bat",
+      "isShellCommand": true,
+      "showOutput": "always"
+   }
